# yass

./: Cargo.toml  Dockerfile  README.md  config.toml  yass.nginx  yass.service  yass.sh  yass.sxcu
src/: main.rs
src/app/: mod.rs  utils.rs
src/app/assets/: base.css  theme.js  wei.js
src/app/responders/: attachment.rs
src/app/routes/: assets.rs  catchers.rs  download.rs  mod.rs  upload.rs  view.rs
src/app/templates/: Audio.html.tera  Error.html.tera  File.html.tera  Image.html.tera  Text.html.tera  Video.html.tera
src/app/validators/: apikey.rs  botrequest.rs  mod.rs  ratelimit.rs
