[package]
name = "yass"
version = "0.1.1"
edition = "2021"

[dependencies]
async-recursion = "1.0.4"
config = "0.13.3"
html-escape = "0.2.13"
humansize = "2.1.3"
mime_guess = "2.0.4"
once_cell = "1.18.0"
rand = "0.8.5"
rocket = "0.5.0-rc.3"
rocket-governor = { version = "0.1.0-rc.4", features = ["limit_info"] }
tera = "1.19.0"
tokio = { version = "1.8", features = ["full"] }
